BookRepository unit test